--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    <footer class="text-center footer">
+    <!--<footer class="text-center footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-5 mb-lg-0">
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer>-->
     <div class="text-center text-white copyright py-4">
         <div class="container"><small>Copyright ©&nbsp;Moyara Colher 2023</small></div>
     </div>
