--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 </div>
             </div>
-            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" href="Moyara Colher - CV.pdf"><i class="fa fa-download me-2"></i><span>Descarregar o meu CV</span></a></div>
+            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" href="Moyara Colher - CV.pdf" download><i class="fa fa-download me-2"></i><span>Descarregar o meu CV</span></a></div>
         </div>
     </section>
     <section id="contact">
