--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <header class="text-center text-white bg-primary masthead">
-        <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="perfil.jpg">
+        <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="perfil.jpg" style="width:25%">
             <h1>Moyara Colher</h1>
             <hr class="star-light">
             <h2 class="font-weight-light mb-0">Profissional em TI | Consultor em M&amp;A</h2>
