--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
                     <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#page-top">Home</a></li>
                     <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                    <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <!-- <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item sidebar-nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -92,7 +92,7 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
             </div>
         </div>
     </section>
-    <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
+    <!-- <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
         <div class="container text-center">
             <h2 class="mx-auto mb-5"><span>Tem&nbsp;</span><em>alguma</em><span><br>duvida?</span></h2><a class="btn btn-primary btn-xl" role="button" href="#">Converse connosco!</a>
         </div>
@@ -124,13 +124,13 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
 </div><img class="img-fluid" src="assets/img/portfolio-4.jpg"></a></div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="footer text-center">
         <div class="container">
             <ul class="list-inline mb-5">
-                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" href="#"><i class="icon-social-facebook"></i></a></li>
-                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" href="#"><i class="icon-social-twitter"></i></a></li>
-                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" href="#"><i class="icon-social-github"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" target="_blank" href="https://fb.com/moyaracolher"><i class="icon-social-facebook"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" target="_blank" href="https://twitter.com/moyaracolher"><i class="icon-social-twitter"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="link-light social-link rounded-circle" target="_blank" href="https://github.com/moyaracolher"><i class="icon-social-github"></i></a></li>
             </ul>
             <p class="text-muted mb-0 small">Copyright &nbsp;© Brand 2024</p>
         </div><a class="js-scroll-trigger scroll-to-top rounded" href="#page-top"><i class="fa fa-angle-up"></i></a>
