--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Moyara Colher</title>
     <meta name="description" content="Soluções Informáticas e Digitais.
 
 Bem-vindo/a à excelência e profissionalismo em soluções personalizáveis. Somos sua fonte completa de soluções, desde a concepção até a implementação e manutenção de projectos escaláveis que garantem a sua satisfação.
