--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
             </div>
         </div>
     </section>
-    <!-- <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
+    <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
         <div class="container text-center">
             <h2 class="mx-auto mb-5"><span>Tem&nbsp;</span><em>alguma</em><span><br>duvida?</span></h2><a class="btn btn-primary btn-xl" role="button" href="#">Converse connosco!</a>
         </div>
@@ -104,27 +104,33 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
                 <h2 class="mb-5">Projectos Recentes</h2>
             </div>
             <div class="row g-0">
-                <div class="col-md-6 col-lg-4"><a class="portfolio-item" href="#"><div class="caption">
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item" href="https://moyaracolher.github.io/projects/demos/abf/" target="_blank">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <h2 class="mt-3">Desenvolvimento Web</h2>
+                                <p class="mb-0">Website ABF</p>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/abf.png">
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4"
+                ><a class="portfolio-item" href="https://moyaracolher.github.io/projects/demos/nacalahealthcare" target="_blank"><div class="caption">
     <div class="caption-content">
-        <h2 class="mt-3">Nome do Projecto</h2>
-        <p class="mb-0">Descricao do Projecto</p>
+        <h2 class="mt-3">Desenvolvimento Web</h2>
+        <p class="mb-0">Website da Clinica Nacala HealthCare</p>
     </div>
-</div><img class="img-fluid" src="assets/img/portfolio-4.jpg"></a></div>
+</div><img class="img-fluid" src="assets/img/nacalahealthcare.png"></a></div>
                 <div class="col-md-6 col-lg-4"><a class="portfolio-item" href="#"><div class="caption">
     <div class="caption-content">
-        <h2 class="mt-3">Nome do Projecto</h2>
-        <p class="mb-0">Descricao do Projecto</p>
-    </div>
-</div><img class="img-fluid" src="assets/img/portfolio-4.jpg"></a></div>
-                <div class="col-md-6 col-lg-4"><a class="portfolio-item" href="#"><div class="caption">
-    <div class="caption-content">
-        <h2 class="mt-3">Nome do Projecto</h2>
-        <p class="mb-0">Descricao do Projecto</p>
+        <h2 class="mt-3">Desenvolvimento Web</h2>
+        <p class="mb-0">Website Profissional</p>
     </div>
 </div><img class="img-fluid" src="assets/img/portfolio-4.jpg"></a></div>
             </div>
         </div>
-    </section> -->
+    </section>
     <footer class="footer text-center">
         <div class="container">
             <ul class="list-inline mb-5">
