--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ Destaque-se connosco como uma escolha confiável para organizações e indivídu
             </div>
         </div>
     </section>
-    <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
+    <!-- <section class="callout" style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg&quot;);background-position: center center;background-repeat: no-repeat;background-size: cover;">
         <div class="container text-center">
             <h2 class="mx-auto mb-5"><span>Tem&nbsp;</span><em>alguma</em><span><br>duvida?</span></h2><a class="btn btn-primary btn-xl" role="button" href="#">Converse connosco!</a>
         </div>
-    </section>
+    </section> -->
     <section id="portfolio" class="content-section">
         <div class="container">
             <div class="text-center content-section-heading">
