--- a/projects/demos/espanor/index.html
+++ b/projects/demos/espanor/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>ESPANOR</title>
-    <link rel="canonical" href="https://espanor.net/index2.html">
-    <meta property="og:url" content="https://espanor.net/index2.html">
+    <link rel="canonical" href="https://espanor.net/">
+    <meta property="og:url" content="https://espanor.net/">
     <meta name="description" content="Por uma Comunidade Sadia, Centrada em Cristo e Autossustentável. Esperança Para Novo Rebento.">
     <meta name="twitter:image" content="https://espanor.net/assets/img/Logo ESPANOR.jpg">
     <meta property="og:image" content="https://espanor.net/assets/img/Logo ESPANOR.jpg">
@@ -14,6 +14,14 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="ESPANOR">
     <meta name="twitter:description" content="Por uma Comunidade Sadia, Centrada em Cristo e Autossustentável. Esperança Para Novo Rebento.">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "ESPANOR",
+            "url": "https://espanor.net"
+        }
+    </script>
     <script>
         (function() {
 
@@ -111,7 +119,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark py-3 sticky-top" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-md py-3 sticky-top" data-bs-theme="dark" style="background: var(--bs-success-border-subtle);">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img src="assets/img/Logo%20ESPANOR.jpg" style="width: 23px;"><span class="m-1 fw-bold">ESPANOR</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
@@ -126,7 +134,7 @@
     </nav>
     <div class="carousel slide" data-bs-ride="carousel" id="carousel-1" style="height: 600px;">
         <div class="carousel-inner h-100">
-            <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image" style="z-index: -1;">
+            <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/Logo%20ESPANOR.jpg" alt="Slide Image" style="z-index: -1;">
                 <div class="container d-flex flex-column justify-content-center h-100">
                     <div class="row">
                         <div class="col-md-6 col-xl-4 offset-md-2">
@@ -177,36 +185,178 @@
         </div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button></div>
-    </div><div class="py-4 py-xl-5">
-    <div class="text-center text-white-50 bg-primary border border-0 p-1">
-        <div class="row row-cols-2 row-cols-md-4">
-            <div class="col">
-                <div class="p-3">
-                    <h4 class="display-5 fw-bold text-white mb-0">123+</h4>
-                    <p class="mb-0">Criancas Alcancadas</p>
+    </div>
+    <div class="container-fluid about py-5">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-xl-3 col-sm-12">
+                    <div class="h-100"><img class="img-fluid h-100 w-100" src="assets/img/Logo%20ESPANOR.jpg" alt="Image"></div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <h4 class="display-5 fw-bold text-white mb-0">45+</h4>
-                    <p class="mb-0">Tecnicos Formados</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <h4 class="display-5 fw-bold text-white mb-0">67+</h4>
-                    <p class="mb-0">Projectos Realizados</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <h4 class="display-5 fw-bold text-white mb-0">89</h4>
-                    <p class="mb-0">Anos de Existencia</p>
+                <div class="col col-xl-9">
+                    <h5 class="text-uppercase text-primary">Sobre ESPANOR</h5>
+                    <h1 class="mb-4">Esperanca Para Novo Rebento</h1>
+                    <div class="tab-class p-4" style="background: var(--bs-primary-border-subtle);">
+                        <ul class="nav nav-tabs d-flex mb-2" role="tablist">
+                            <li class="nav-item mb-3 m-1" role="presentation"><a class="nav-link text-center bg-white d-flex py-2" role="tab" data-bs-toggle="pill" href="#tab-1"><span class="text-dark" style="width:150px;">Visao</span></a></li>
+                            <li class="nav-item mb-3 m-1" role="presentation"><a class="nav-link text-center bg-white d-flex py-2" role="tab" data-bs-toggle="pill" href="#tab-2"><span class="text-dark" style="width:150px;">Missao</span></a></li>
+                            <li class="nav-item mb-3 m-1" role="presentation"><a class="nav-link active text-center bg-white d-flex py-2" role="tab" data-bs-toggle="pill" href="#tab-3"><span class="text-dark" style="width:150px;">Valores</span></a></li>
+                        </ul>
+                        <div class="tab-content small">
+                            <div class="tab-pane fade show p-0" role="tabpanel" id="tab-1">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="d-flex">
+                                            <div class="text-start my-auto">
+                                                <h5 class="text-uppercase mb-3">Visao</h5>
+                                                <p class="mb-4">Por uma Comunidade Sadia, Centrada em Cristo e Autossustentável<br><br>Nossa Visão está de desenvolver as comunidades para ser uma comunidade sadia, centrada em Cristo e autossustentável. Desse Comunidades pode ser as comunidades de Milange, nas igrejas, no quintal de ESPANOR ou na escola.<br><br>Essas Comunidades caraterísticas, que são de qualidade, identidade e sustentabilidade.<br><br>Esse fazemos através as seguintes formas:<br><br>1. Assegurar a qualidade de ensino (formal e informal)<br><br>2. Integrar a identidade nas intervenções (usar cada oportunidade)<br><br>3. Promover a sustentabilidade local</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade show p-0" role="tabpanel" id="tab-2">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="d-flex">
+                                            <div class="text-start my-auto">
+                                                <h5 class="text-uppercase mb-3">Missao</h5>
+                                                <p class="mb-4">Ser provedor duma educação holística, excelente, equitativa e sustentável<br><br>O Assunto principal de nossa missão são educação (formal e informal).<br><br>Desejado, que esse Educação esta:<br><br>1. Holisticidade (integrar o testemunho cristão)<br><br>2. Excelência (boa qualidade)<br><br>3. Equidade (tratamento igual – exemplo: COVs)<br><br>4. Sustentabilidade (comparticipação local)</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane active fade show p-0" role="tabpanel" id="tab-3">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="d-flex">
+                                            <div class="text-start my-auto">
+                                                <h5 class="text-uppercase mb-3">VALORES</h5>
+                                                <p class="mb-4">Holístico, ético, excelência, integridade, equidade<br><br>Nossas Valores são:<br><br>1. Holístico (integrar o testemunho Cristão)<br><br>2. Ético (fazer coisas boas, justas e certas)<br><br>3. Excelência (fazer tudo com qualidade)<br><br>4. Integridade (fazer um trabalho honesto)<br><br>5. Equidade (tratar todos iguais)</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="container-fluid bg-light service py-5">
+        <div class="container py-5">
+            <div class="text-center mx-auto pb-5" style="max-width:800px;">
+                <h5 class="text-uppercase text-primary">Servicos</h5>
+                <h1 class="mb-0">O que fazemos para a comunidade</h1>
+            </div>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-6 col-xl-3">
+                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="service-link"><a href="#" class="h4 mb-0">Educacao da Infancia</a></div>
+                    </div>
+                    <p class="my-4">Ensinar tocando coracoes </p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-xl-3">
+                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="service-link"><a href="#" class="h4 mb-0">SOPHIA</a></div>
+                    </div>
+                    <p class="my-4">Dispomos de cursos técnicos para capacitar jovens e adultos, preparando-os para o mercado de trabalho.</p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-xl-3">
+                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="service-link"><a href="#" class="h4 mb-0">Desenvolvimento Comunitario</a></div>
+                    </div>
+                    <p class="my-4">Contribuímos para o desenvolvimento sustentável das comunidades atendidas.</p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-xl-3">
+                    <div class="service-item"><img class="img-fluid w-100" src="assets/img/Servicos%20500x600.jpg" alt="Image">
+                        <div class="service-link"><a href="#" class="h4 mb-0">Assistencia Social</a></div>
+                    </div>
+                    <p class="my-4">Realizamos acções sociais para ajudar os mais necessitados.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="py-4 py-xl-5">
+        <div class="text-center text-white-50 bg-primary border-0 border p-1">
+            <div class="row row-cols-2 row-cols-md-4">
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">123+</h4>
+                        <p class="mb-0">Criancas Alcancadas</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">45+</h4>
+                        <p class="mb-0">Tecnicos Formados</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">67+</h4>
+                        <p class="mb-0">Projectos Realizados</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">89</h4>
+                        <p class="mb-0">Anos de Existencia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid donation py-5">
+        <div class="container py-5">
+            <div class="text-center mx-auto pb-5" style="max-width:800px;">
+                <h5 class="text-uppercase text-primary">Programas ou Projectos</h5>
+                <h1 class="mb-0">Salvando vidas...</h1>
+            </div>
+            <div class="row g-4">
+                <div class="col col-lg-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
+                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
+                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
+                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-3">
+                    <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
+                        <div class="d-flex flex-column donation-content">
+                            <h5 class="text-uppercase text-primary mb-4">Organic</h5>
+                            <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                            <div class="d-flex justify-content-start align-items-center donation-btn"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Saber mais</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="d-flex justify-content-center align-items-center"><a class="btn btn-primary btn-hover-bg text-white py-2 px-4" role="button" href="#">Ver todos os Programas</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container py-4 py-xl-5">
         <div class="row mb-4 mb-lg-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -405,10 +555,10 @@
     </div>
 </div></section>
     <footer class="text-center py-4 small">
-        <div class="container">
+        <div class="container small">
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
-                    <p class="text-muted my-2">Todos os direitos reservados © 2024 ESPANOR</p>
+                    <p class="text-muted my-2">© 2024 ESPANOR.&nbsp;Todos os direitos reservados</p>
                 </div>
                 <div class="col">
                     <ul class="list-inline my-2">
@@ -450,10 +600,7 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <ul class="list-inline my-2">
-                        <li class="list-inline-item"><a class="link-secondary" href="#">Politica de Privacidade</a></li>
-                        <li class="list-inline-item"><a class="link-secondary" href="#">Termos e Condicoes</a></li>
-                    </ul>
+                    <p class="text-muted my-2">Desenvolvido por Moyara Colher</p>
                 </div>
             </div>
         </div>
