--- a/projects/demos/espanor/index3.html
+++ b/projects/demos/espanor/index3.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>ESPANOR</title>
-    <link rel="canonical" href="https://espanor.net/">
-    <meta property="og:url" content="https://espanor.net/">
+    <link rel="canonical" href="https://espanor.net/index3.html">
+    <meta property="og:url" content="https://espanor.net/index3.html">
     <meta name="description" content="Por uma Comunidade Sadia, Centrada em Cristo e Autossustentável. Esperança Para Novo Rebento.">
     <meta name="twitter:image" content="https://espanor.net/assets/img/Logo ESPANOR.jpg">
     <meta property="og:image" content="https://espanor.net/assets/img/Logo ESPANOR.jpg">
@@ -14,14 +14,6 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="ESPANOR">
     <meta name="twitter:description" content="Por uma Comunidade Sadia, Centrada em Cristo e Autossustentável. Esperança Para Novo Rebento.">
-    <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "WebSite",
-            "name": "ESPANOR",
-            "url": "https://espanor.net"
-        }
-    </script>
     <script>
         (function() {
 
