--- a/projects/demos/espanor/index.html
+++ b/projects/demos/espanor/index.html
@@ -315,7 +315,7 @@
                 <h1 class="mb-0">Salvando vidas...</h1>
             </div>
             <div class="row g-4">
-                <div class="col col-3 col-md-6 col-sm-12">
+                <div class="col col-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
                     <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
                         <div class="d-flex flex-column donation-content">
                             <h5 class="text-uppercase text-primary mb-4">Organic</h5>
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-3 col-md-6 col-sm-12">
+                <div class="col col-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
                     <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
                         <div class="d-flex flex-column donation-content">
                             <h5 class="text-uppercase text-primary mb-4">Organic</h5>
@@ -333,7 +333,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-3 col-md-6 col-sm-12">
+                <div class="col col-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
                     <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
                         <div class="d-flex flex-column donation-content">
                             <h5 class="text-uppercase text-primary mb-4">Organic</h5>
@@ -342,7 +342,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-3 col-md-6 col-sm-12">
+                <div class="col col-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
                     <div class="donation-item"><img class="img-fluid w-100" src="assets/img/Programas%20500x600.jpg" alt="Image">
                         <div class="d-flex flex-column donation-content">
                             <h5 class="text-uppercase text-primary mb-4">Organic</h5>
